# bevy_map_editor_template

./: Cargo.toml  README.md  cargo-generate.toml
assets/maps/: .gitkeep
src/: main.rs
